--- a/ChatHouse/app/src/main/res/layout/simple_list_1.xml
+++ b/ChatHouse/app/src/main/res/layout/simple_list_1.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:textColor="@color/gray"
     android:textSize="20dp"
-    android:id="@+id/textView">
+    android:id="@+id/textView"
+    android:layout_marginBottom="5dp">
 
 </TextView>
 </LinearLayout>
