--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pages.ProfilePage">
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/FollowingFollowersListView">
+    tools:context=".HomePage">
 
-
-    </ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
