--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:fontFamily="cursive"
         android:gravity="center"
         android:text="GoNuts"
-        android:textColor="@color/almostorange"
+        android:textColor="@color/Verypink"
         android:textColorLink="@color/black"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/ErrorMessage"
@@ -108,10 +108,10 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="128dp"
-        android:backgroundTint="@color/almostorange"
+        android:backgroundTint="@color/Verypink"
         android:fontFamily="sans-serif-condensed-light"
         android:text="Login"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
