--- a/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
@@ -18,7 +18,7 @@
         android:fontFamily="cursive"
         android:gravity="center"
         android:text="GoNuts"
-        android:textColor="@color/almostorange"
+        android:textColor="@color/Verypink"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/resultText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,10 +131,10 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="85dp"
-        android:backgroundTint="@color/almostorange"
+        android:backgroundTint="@color/Verypink"
         android:fontFamily="sans-serif-condensed-light"
         android:text="sign up"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
