--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -5,35 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Pages.ProfilePage"
+    android:background="@drawable/b22"
     >
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    android:id="@+id/Fake">
+    android:id="@+id/Fake"
+    >
 
 
-    <ImageView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:ems="10"
-        android:layout_marginTop="40dp"
-        android:id="@+id/ProfileImage"
+        android:layout_height="150dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/Name"
-        android:src="@drawable/thumb_15951118880user"
+        android:layout_marginTop="30dp"
+        android:id="@+id/ProfileImageContainer"
+        app:cardElevation="5dp"
         >
 
-    </ImageView>
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:ems="10"
+            android:id="@+id/ProfileImage"
+            android:src="@drawable/thumb_15951118880user"
+            android:layout_gravity="center"
+            >
+        </ImageView>
+    </com.google.android.material.card.MaterialCardView>
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:background="@color/white"
+        android:id="@+id/LineBelow"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="@id/ProfileImageContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:tooltipText="Interests"
+        />
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/Name"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/ProfileImage"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/ProfileImageContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/UsernameText"
@@ -48,8 +72,8 @@
             android:text="Melika"
             android:textSize="20dp"
             android:layout_marginRight="5dp"
-            android:textColor="@color/almostpink"
-            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/Verypink"
+            android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center">
 
         </TextView>
@@ -60,8 +84,8 @@
             android:id="@+id/LastName"
             android:text="Ahmadi"
             android:textSize="20dp"
-            android:textColor="@color/almostpink"
-            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/Verypink"
+            android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center">
 
         </TextView>
@@ -71,10 +95,10 @@
         android:layout_width="wrap_content"
         android:text="Username"
         android:gravity="center"
-        android:textColor="@color/almostpink"
-        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/Verypink"
+        android:fontFamily="sans-serif-condensed-medium"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:id="@+id/UsernameText"
         app:layout_constraintTop_toBottomOf="@+id/Name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +109,8 @@
 
 
     <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:id="@+id/Statics"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/UsernameText"
@@ -99,9 +123,9 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
-            android:textColor="@color/almostpink"
+            android:textColor="@color/Verypink"
             android:fontFamily="sans-serif-medium"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:gravity="center"
             android:id="@+id/Followers"
             android:text="3453"
@@ -116,9 +140,9 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:gravity="center"
-            android:textColor="@color/almostpink"
+            android:textColor="@color/Verypink"
             android:fontFamily="sans-serif-medium"
             android:id="@+id/Following"
             android:text="1238"
@@ -136,7 +160,7 @@
             android:layout_marginRight="40dp"
             android:layout_marginTop="5dp"
             android:textSize="10dp"
-            android:textColor="@color/gray"
+            android:textColor="@color/Verypink"
             android:fontFamily="sans-serif-medium"
             android:id="@+id/FollowersText"
             android:text="Followers"
@@ -154,7 +178,7 @@
             android:textSize="10dp"
             android:id="@+id/FollowingText"
             android:layout_marginTop="5dp"
-            android:textColor="@color/gray"
+            android:textColor="@color/Verypink"
             android:fontFamily="sans-serif-medium"
             android:text="Following"
             app:layout_constraintTop_toBottomOf="@+id/Followers"
@@ -166,9 +190,9 @@
     </GridLayout>
 
     <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/Statics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -183,15 +207,18 @@
             android:id="@+id/MessageButton"
             android:layout_width="170dp"
             android:textColor="@color/almostorange"
-            android:backgroundTint="@color/light">
+            android:textSize="12dp"
+            android:backgroundTint="@color/white">
 
         </Button>
 
         <Button
             android:id="@+id/FollowButton"
             android:layout_width="171dp"
-            android:backgroundTint="@color/light"
+            android:backgroundTint="@color/white"
             android:text="Follow"
+            android:textSize="12dp"
+
             android:textColor="@color/almostorange">
 
         </Button>
@@ -199,39 +226,28 @@
     </GridLayout>
     <Button
         android:layout_width="340dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:id="@+id/EditProfileButton"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/Statics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/light"
-        android:backgroundTint="@color/gray"
+        android:textColor="@color/almostorange"
+        android:textSize="12dp"
         android:text="Edit Profile">
 
     </Button>
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="@color/light"
-        android:id="@+id/LineBelow"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/Buttons"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:tooltipText="Interests"
-        />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:drawableStart="@color/gray"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="Bio"
-        android:textColor="@color/almostpink"
-        app:layout_constraintTop_toBottomOf="@+id/LineBelow"
+        android:textColor="@color/Verypink"
+        app:layout_constraintTop_toBottomOf="@+id/Buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/Bio"
@@ -240,14 +256,25 @@
     </TextView>
 
 
-    <HorizontalScrollView
+<!--    <com.google.android.material.card.MaterialCardView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/EmailText">-->
+
+        <HorizontalScrollView
         android:id="@+id/Interests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailText">
+        android:fadeScrollbars="false"
+        android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EmailText"
+            >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -260,6 +287,10 @@
 
 
     </HorizontalScrollView>
+<!--    </com.google.android.material.card.MaterialCardView>-->
+
+
+
     <!--    <TextView-->
     <!--        android:layout_width="wrap_content"-->
     <!--        android:layout_height="wrap_content"-->
@@ -284,33 +315,22 @@
     <!--    </Switch>-->
 
     <TextView
+        android:id="@+id/EmailText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="5dp"
-        android:textSize="15dp"
-        android:fontFamily="sans-serif-medium"
-        android:id="@+id/EmailText"
-        android:textColor="@color/almostpink"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:gravity="center"
         android:text="Email"
-        app:layout_constraintTop_toBottomOf="@+id/Bio"
+        android:textColor="@color/Verypink"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Bio">
 
     </TextView>
 
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:id="@+id/MemberOf"-->
-    <!--        android:layout_marginTop="30dp"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/Interests"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        android:text="Member of"-->
-    <!--        >-->
 
-    <!--    </TextView>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
@@ -321,21 +341,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
 />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
-        android:text="Search"
-        android:backgroundTint="@color/light"
-        android:textColor="@color/almostorange"
-        android:id="@+id/SearchButton">
+        android:backgroundTint="@color/white"
+        app:cardElevation="10dp"
+        >
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:rowCount="1"
+            android:columnCount="2"
+            android:id="@+id/Nav"
+            android:useDefaultMargins="true"
+            android:layout_gravity="center_horizontal"
+            >
 
-    </Button>
+            <TextView
+                android:id="@+id/SearchButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginRight="60dp"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:drawableTop="@drawable/homee"
+                android:textColor="@color/almostorange">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/Pro"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginLeft="60dp"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:drawableTop="@drawable/userrrr"
+                android:textColor="@color/almostorange">
+
+            </TextView>
+
+        </GridLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
