--- a/ChatHouse/app/src/main/res/values/colors.xml
+++ b/ChatHouse/app/src/main/res/values/colors.xml
@@ -7,16 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light">#ddd6d1</color>
-    <color name="almostblack">#ddd6d1</color>
-    <color name="almostpink">#826263</color>
-    <color name="gray">#646c6c</color>
-    <color name="almostorange">#9c7463</color>
-    <color name="Pink">#E98074</color>
-    <color name="Verypink">#E85A4F</color>
-    <color name="Orange">#FF5722</color>
-    <color name="cyan">#673AB7</color>
-    <color name="almostgreen">#C0CA33</color>
+    <color name="light">#E7D2CC</color>
+    <color name="almostblack">#67595E</color>
+    <color name="almostpink">#FFC5D0</color>
+    <color name="gray">#54627B</color>
+    <color name="almostorange">#E98980</color>
+    <color name="Pink">#FB6B90</color>
+    <color name="Verypink">#710117</color>
+    <color name="Orange">#D48C70</color>
+    <color name="cyan">#EEEDE7</color>
+    <color name="almostgreen">#EBBBB0</color>
+
+
+
 
 
 </resources>
