--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomePage">
-
+    tools:context=".HomePage"
+    android:background="@drawable/b22"
+>
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:id="@+id/StartRoom"
+    android:layout_marginTop="680dp"
+    android:text="Start Room"
+    android:textColor="@color/almostorange"
+    android:backgroundTint="@color/white"
+    android:textSize="16dp"
+    android:fontFamily="sans-serif-medium"
+    android:drawableLeft="@drawable/plus"></Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
