--- a/ChatHouse/app/src/main/res/layout/activity_search_l2.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_search_l2.xml
@@ -26,7 +26,6 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         android:visibility="invisible" />
-
     <Button
         android:id="@+id/ProfBtn"
         android:layout_width="wrap_content"
@@ -39,43 +38,20 @@
         android:id="@+id/SearchedPersonListView"
         android:layout_width="fill_parent"
         android:layout_height="375dp"
-        android:layout_below="@+id/search"></ListView>
-
-    <HorizontalScrollView
-        android:id="@+id/Items"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailText">
-
-        <LinearLayout
-            android:id="@+id/ItemsLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-    </HorizontalScrollView>
+        android:layout_below="@+id/search"></ListView   >
 
     <ScrollView
-        android:id="@+id/Category"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/SearchedPersonListView">
 
         <GridLayout
-            android:id="@+id/category_grid"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:alignmentMode="alignMargins"
             android:columnCount="2"
             android:columnOrderPreserved="false"
-            android:rowCount="7"
-            android:clickable="true"
-            android:onClick="onButtonClickCancel"
-            >
+            android:rowCount="7">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/Wellness"
