--- a/ChatHouse/app/src/main/res/layout/activity_search.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_search.xml
@@ -14,13 +14,23 @@
 
         <requestFocus />
     </SearchView>
+    <TextView
+        android:id="@+id/SearchTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="Search in all people"
+        android:textColor="@color/black"
+        android:textSize="22dp"/>
 
     <TextView
         android:id="@+id/SearchError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/search"
-        android:layout_marginTop="15dp"
+        android:layout_below="@+id/SearchTitle"
+        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text="No Results Found"
         android:textColor="@color/black"
@@ -38,9 +48,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/search"
-        android:orientation="vertical"
-        android:background="@color/almostpink">
+        android:layout_below="@+id/SearchTitle"
+        android:orientation="vertical">
 
         <ListView
             android:id="@+id/SearchedPersonListView"
